Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-28750

Regression: Crash when diff has "No difference"

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Not Evaluated
    • Qt Creator 10.0.0
    • Qt Creator 10.0.0-beta1
    • All Other Issues
    • None
    • All
    • 202b69667 (10.0)

    Description

      In order to reproduce:
      1. Open some file, add a character and remove it, so that the file is modified (marked with asterisk), but no real modifications are done.
      2. Press Ctrl+H (or Tools | Diff | Diff Current File) -> crash.

      Attachments

        For Gerrit Dashboard: QTCREATORBUG-28750
        # Subject Branch Project Status CR V

        Activity

          People

            jkobus Jarek Kobus
            jkobus Jarek Kobus
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes